# REDasm-Loaders

./: CMakeLists.txt  README.md
binary/: CMakeLists.txt  binary.cpp  binary.h
chip8/: CMakeLists.txt  chip8.cpp  plugin.cpp
dex/: CMakeLists.txt  common_types.h  demangler.cpp  demangler.h  plugin.cpp
dex/android/: CMakeLists.txt
dex/android/libdex/: DexDataMap.cpp  DexDataMap.h  DexDebugInfo.cpp  DexFile.cpp  DexFile.h  DexOptData.cpp  DexSwapVerify.cpp
dex/assembler/: dalvik.cpp  dalvik.h  dalvik_algorithm.cpp  dalvik_algorithm.h  dalvik_metadata.h  dalvik_opcodes.h  dalvik_payload.h  dalvik_printer.cpp  dalvik_printer.h
dex/loader/: dex.cpp  dex.h  dex_constants.h  dex_header.h  dex_statemachine.cpp  dex_statemachine.h
elf/: CMakeLists.txt  elf.cpp  elf.h  elf_abi.cpp  elf_abi.h  elf_analyzer.cpp  elf_analyzer.h  elf_common.h  elf_format.cpp  elf_format.h  elf_header.h  plugin.cpp
esp/: CMakeLists.txt  esp.cpp  esp.h  esp_constants.h  esp_header.h  plugin.cpp
gba/: CMakeLists.txt  gba.cpp  gba.h
gbadvance/: CMakeLists.txt  gba.cpp  gba.h
n64/: CMakeLists.txt  n64.cpp  n64.h  n64_analyzer.cpp  n64_analyzer.h  n64_header.h
pe/: CMakeLists.txt  classifier.cpp  classifier.h  ordinals.cpp  ordinals.h  pe.cpp  pe.h  pe_analyzer.cpp  pe_analyzer.h  pe_classifier.cpp  pe_classifier.h  pe_common.h  pe_constants.h  pe_debug.h  pe_format.cpp  pe_format.h  pe_header.h  pe_imports.cpp  pe_imports.h  pe_resources.cpp  pe_resources.h  pe_utils.cpp  pe_utils.h  plugin.cpp
psx/: CMakeLists.txt  psx.cpp  psxbios.cpp  psxbios.h  psxexe.cpp  psxexe.h
psxexe/: CMakeLists.txt  psxexe.cpp  psxexe.h
xbe/: CMakeLists.txt  xbe.cpp  xbe.h  (+1 more)
(+49 files in other folders)
