cmake_minimum_required(VERSION 3.12)

project(REDasm_Loaders)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)

#add_subdirectory(gba)
add_subdirectory(psx)
add_subdirectory(chip8)
add_subdirectory(esp)
add_subdirectory(xbe)
add_subdirectory(n64)
add_subdirectory(dex)
add_subdirectory(elf)
add_subdirectory(pe)
